--- a/Classifiy_Reviews1.ipynb
+++ b/Classifiy_Reviews1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCf+kSN3s4NC4Gi5F4WaBd",
+      "authorship_tag": "ABX9TyOYGvXaMwdilKU6i6lN2kjc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,54 +28,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "import os, sys\n",
+        "from google.colab import drive\n",
+        "ROOT = '/content/drive/MyDrive/CAS_Gregi/'\n",
+        "IMPORT_PATH_SYMLINK = {'link': '/content/modules', 'target': ROOT + 'CO_modules'}\n",
+        "\n",
+        "drive.mount('/content/drive', force_remount=False)\n",
+        "if not os.path.exists(IMPORT_PATH_SYMLINK['link']):\n",
+        "    os.symlink(IMPORT_PATH_SYMLINK['target'], IMPORT_PATH_SYMLINK['link'])\n",
+        "if IMPORT_PATH_SYMLINK['link'] not in sys.path:\n",
+        "    sys.path.insert(0, IMPORT_PATH_SYMLINK['link'])"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "jd5MzPmpdbjL",
-        "outputId": "156d2277-8929-4a9b-9a83-77d65ade1f8f"
+        "id": "JjMSKd9t6_Zt",
+        "outputId": "13df0d53-ec8a-4921-d3f9-f3c9eed26d45"
       },
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
-      ],
-      "source": [
-        "import os, sys\n",
-        "from google.colab import drive\n",
-        "ROOT = '/content/drive/My Drive/CAS_Gregi/'\n",
-        "drive.mount('/content/drive', force_remount=True)\n",
-        "\n",
-        "nb_path = '/content/notebooks'\n",
-        "os.symlink(ROOT + 'CO_modules', nb_path)\n",
-        "sys.path.insert(0,nb_path)\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "%env NLTK_DATA=$nb_path\n",
-        "!pip install --target=$nb_path contractions\n",
-        "!python -m textblob.download_corpora"
+        "%env NLTK_DATA={IMPORT_PATH_SYMLINK['link']}\n",
+        "!pip install --target={IMPORT_PATH_SYMLINK['link']} contractions\n",
+        "!python -m textblob.download_corpora\n",
+        "!pip install --target={IMPORT_PATH_SYMLINK['link']} autocorrect"
       ],
       "metadata": {
-        "id": "z44PIdnGFDqB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install --target=$nb_path autocorrect"
-      ],
-      "metadata": {
-        "id": "91V-VorxQUd8"
+        "id": "qSecUzjX5o1z"
       },
       "execution_count": null,
       "outputs": []
@@ -171,7 +163,7 @@
       "metadata": {
         "id": "sxGSWzUUgKEy"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -183,7 +175,7 @@
       "metadata": {
         "id": "bozOCBpyQD40"
       },
-      "execution_count": 33,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -196,7 +188,7 @@
       "metadata": {
         "id": "-whRjI5nhd0d"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -244,12 +236,17 @@
         "    # tb.raw\n",
         "    #text = spell(text)\n",
         "    #return TextBlob(text).lower().correct().raw\n",
-        "    return spell(text)"
+        "    return spell(text)\n",
+        "\n",
+        "def clean_reviews(review_dict):\n",
+        "    data_ = {k:[normalize(x) for x in v] for k,v in review_dict.items()}\n",
+        "    data  = {k:[x.lower().strip() for x in v] for k,v in data_t.items()}\n",
+        "    return data"
       ],
       "metadata": {
         "id": "yPcHAWgkhe8E"
       },
-      "execution_count": 62,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -258,7 +255,9 @@
         "res = []\n",
         "cond = lambda tag: tag[0] in 'JR' or  tag in ('VBN', 'VBG')\n",
         "for review in data_test[1][:10]:\n",
-        "    res.append(tag_and_normalize(review, cond = cond))"
+        "    res.append(tag_and_normalize(review, cond = cond))\n",
+        "\n",
+        "# res"
       ],
       "metadata": {
         "id": "Xdlbmkv_h8gd"
@@ -325,45 +324,12 @@
     {
       "cell_type": "code",
       "source": [
-        "data_test_clean = {k:[normalize(x) for x in v] for k,v in data_test.items()}"
+        "data_train_clean, data_test_clean = [clean_reviews(r) for r in (data_train, data_test)]"
       ],
       "metadata": {
-        "id": "jQ9u_KDkLqoe"
+        "id": "R-GTKzc_4e6Y"
       },
-      "execution_count": 64,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data_train_clean = {k:[normalize(x) for x in v] for k,v in data_train.items()}"
-      ],
-      "metadata": {
-        "id": "ZLCGq0PyVyO3"
-      },
-      "execution_count": 65,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data_test_clean = {k:[x.lower().strip() for x in v] for k,v in data_test_clean.items()}"
-      ],
-      "metadata": {
-        "id": "Tdzj3HzWkv7K"
-      },
-      "execution_count": 71,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data_train_clean = {k:[x.lower().strip() for x in v] for k,v in data_train_clean.items()}"
-      ],
-      "metadata": {
-        "id": "8E5R4xybk-7E"
-      },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,8 +346,8 @@
     {
       "cell_type": "code",
       "source": [
-        " with open(ROOT + 'data/hotelreviews_cleaned_train_test_spell.pkl','wb') as f:\n",
-        "    pickle.dump(train_test,f)"
+        "#  with open(ROOT + 'data/hotelreviews_cleaned_train_test_spell.pkl','wb') as f:\n",
+        "#     pickle.dump(train_test,f)"
       ],
       "metadata": {
         "id": "ZBs9ZhFDPAGP"
