--- a/Classify_Reviews2.ipynb
+++ b/Classify_Reviews2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNCpjh6An3oMIq/mYLVthKF",
+      "authorship_tag": "ABX9TyNT3x+MA4GRr4+GX8f/RSSk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "IMPORT_PATH_SYMLINK = {'link': '/content/modules', 'target': ROOT + 'CO_modules'}\n",
         "\n",
         "drive.mount('/content/drive', force_remount=False)\n",
-        "if not os.path.exists(IMPORT_PATH):\n",
+        "if not os.path.exists(IMPORT_PATH_SYMLINK['link']):\n",
         "    os.symlink(IMPORT_PATH_SYMLINK['target'], IMPORT_PATH_SYMLINK['link'])\n",
         "if IMPORT_PATH_SYMLINK['link'] not in sys.path:\n",
         "    sys.path.insert(0, IMPORT_PATH_SYMLINK['link'])"
@@ -76,39 +76,10 @@
         "!ls /content $ROOT /content/drive {IMPORT_PATH_SYMLINK['link']}"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iRED4e1XBIDY",
-        "outputId": "e5039ef3-f6f9-47a3-9397-ae0eb877afc1"
+        "id": "iRED4e1XBIDY"
       },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "lrwxrwxrwx 1 root root 44 Aug 12 08:58 /content/modules -> '/content/drive/My Drive/CAS_Gregi/CO_modules'\n",
-            "/content:\n",
-            "drive  modules\tsample_data\n",
-            "\n",
-            "/content/drive:\n",
-            "MyDrive\n",
-            "\n",
-            "/content/drive/MyDrive/CAS_Gregi/:\n",
-            "CO_modules  data  Huggingface  My_Models\n",
-            "\n",
-            "/content/modules:\n",
-            "ahocorasick.cpython-310-x86_64-linux-gnu.so  corpora\n",
-            "anyascii\t\t\t\t     data\n",
-            "anyascii-0.3.2.dist-info\t\t     pyahocorasick-2.0.0.dist-info\n",
-            "autocorrect\t\t\t\t     taggers\n",
-            "autocorrect-2.6.1.dist-info\t\t     textsearch\n",
-            "contractions\t\t\t\t     textsearch-0.0.24.dist-info\n",
-            "contractions-0.1.73.dist-info\t\t     tokenizers\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -153,7 +124,21 @@
         "\n",
         "    n = len(reviews)\n",
         "    ds = tf.data.Dataset.from_tensor_slices((reviews[:n], gpt_scores[:n]))\n",
-        "    return ds"
+        "    return ds\n",
+        "\n",
+        "def batch(ds, batch_size = 32):\n",
+        "    xs, ys =  next(iter(ds))\n",
+        "    if xs.shape == () or xs.shape[0] == 1:\n",
+        "        ds = ds.batch(batch_size)\n",
+        "    return ds\n",
+        "\n",
+        "def test_model(model, ds):\n",
+        "    i = 0\n",
+        "    for xs, _ in iter(ds):\n",
+        "        i += 1\n",
+        "        if (i %10) ==0:\n",
+        "            print(i, end = ', ')\n",
+        "        model(xs)"
       ],
       "metadata": {
         "id": "pcfrpwo-oBSa"
@@ -164,8 +149,8 @@
     {
       "cell_type": "code",
       "source": [
-        "ds_train = get_dataset(data_train)\n",
-        "ds_test = get_dataset(data_test)"
+        "ds_train = batch(get_dataset(data_train))\n",
+        "ds_test  = batch(get_dataset(data_test))"
       ],
       "metadata": {
         "id": "90g9QwfIp1pC"
@@ -462,29 +447,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# batch train and validate date if this not already happend\n",
-        "if next(iter(ds_train))[0].shape[0] == 1:\n",
-        "    ds_train = ds_train.batch(32)\n",
-        "\n",
-        "if next(iter(ds_test))[0].shape[0] == 1:\n",
-        "    ds_test = ds_test.batch(32)"
-      ],
-      "metadata": {
-        "id": "vUV_Ar7ItTN2"
-      },
-      "execution_count": 84,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# test if reviews pass through model, show sample output\n",
-        "i = 0\n",
-        "for review, _ in iter(ds_train):\n",
-        "    i += 1\n",
-        "    if (i %10) ==0:\n",
-        "        print(i, end = ', ')\n",
-        "print(model(review))"
+        "for ds in (ds_train, ds_test):  test_model(model, ds)"
       ],
       "metadata": {
         "colab": {
@@ -587,6 +551,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "# next(iter(ds_train))"
       ],
       "metadata": {
@@ -753,6 +718,7 @@
         "the breakfast was ok, but nothing special.\n",
         "the staff was very friendly.\n",
         "But the room we small and not suitable for working'''\n",
+        "\n",
         "model.predict(fix_shape(text))"
       ],
       "metadata": {
