--- a/Classifiy_Reviews1.ipynb
+++ b/Classifiy_Reviews1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYGvXaMwdilKU6i6lN2kjc",
+      "authorship_tag": "ABX9TyM7xEbGvReFSVzgHxDNpdHo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -240,7 +240,7 @@
         "\n",
         "def clean_reviews(review_dict):\n",
         "    data_ = {k:[normalize(x) for x in v] for k,v in review_dict.items()}\n",
-        "    data  = {k:[x.lower().strip() for x in v] for k,v in data_t.items()}\n",
+        "    data  = {k:[x.lower().strip() for x in v] for k,v in data_.items()}\n",
         "    return data"
       ],
       "metadata": {
