--- a/Classify_Reviews2.ipynb
+++ b/Classify_Reviews2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNT3x+MA4GRr4+GX8f/RSSk",
+      "authorship_tag": "ABX9TyPYl9V6PEFxjnco9ArX9nTl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,20 +39,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9dXRgHF-nNaJ",
-        "outputId": "47c6fe38-91a1-4463-cffd-5340a7d1754d"
+        "outputId": "f28465f4-abe9-4374-cf46-b3d2addd2bae"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -60,7 +60,10 @@
         "import os, sys\n",
         "from google.colab import drive\n",
         "ROOT = '/content/drive/MyDrive/CAS_Gregi/'\n",
-        "IMPORT_PATH_SYMLINK = {'link': '/content/modules', 'target': ROOT + 'CO_modules'}\n",
+        "MODULE_PATH = 'CO_modules/'\n",
+        "MODEL_PATH  = 'My_Models/'\n",
+        "\n",
+        "IMPORT_PATH_SYMLINK = {'link': '/content/modules', 'target': ROOT + MODULE_PATH}\n",
         "\n",
         "drive.mount('/content/drive', force_remount=False)\n",
         "if not os.path.exists(IMPORT_PATH_SYMLINK['link']):\n",
@@ -91,7 +94,7 @@
       "metadata": {
         "id": "1vIHgPwxnWNA"
       },
-      "execution_count": 38,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -105,7 +108,7 @@
       "metadata": {
         "id": "CG5uUG2knoQC"
       },
-      "execution_count": 39,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -143,7 +146,7 @@
       "metadata": {
         "id": "pcfrpwo-oBSa"
       },
-      "execution_count": 40,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -155,7 +158,7 @@
       "metadata": {
         "id": "90g9QwfIp1pC"
       },
-      "execution_count": 41,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -167,7 +170,7 @@
       "metadata": {
         "id": "f31svtLJqCgy"
       },
-      "execution_count": 42,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -181,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RPcDw3KGqfz0",
-        "outputId": "99c487a5-af6c-4df2-b0e6-b876a0daaa2f"
+        "outputId": "52134c25-4404-4cc8-bb16-88156db41890"
       },
-      "execution_count": 65,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +196,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 8
         }
       ]
     },
@@ -227,7 +230,7 @@
       "metadata": {
         "id": "JoS_4NYuq2Gz"
       },
-      "execution_count": 77,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -242,9 +245,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0BYO96FPrnf1",
-        "outputId": "ffe21be8-c8ca-4ff7-b692-9d73780b56d1"
+        "outputId": "8b8d138b-8810-4427-fd87-68611d23f228"
       },
-      "execution_count": 78,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +257,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 10
         }
       ]
     },
@@ -268,9 +271,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QhyvW7rFr3k1",
-        "outputId": "738a6a74-6a3f-4196-84d5-9d91ac28583e"
+        "outputId": "60f1ff25-3c23-47c9-8d73-80498059b0fa"
       },
-      "execution_count": 79,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -299,7 +302,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 11
         }
       ]
     },
@@ -341,47 +344,50 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gOJlXkTIsHa0",
-        "outputId": "b841119a-dbe5-48de-99d7-ced2ce423a3c"
+        "outputId": "7d726657-2a90-4a47-946c-411d46d17135"
       },
-      "execution_count": 81,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<tf.Tensor: shape=(200, 16), dtype=float32, numpy=\n",
-              "array([[ 0.0476017 , -0.03642512, -0.02449933, ..., -0.02889631,\n",
-              "        -0.01723612, -0.01314093],\n",
-              "       [ 0.02439922,  0.0304555 , -0.01999265, ..., -0.04715417,\n",
-              "        -0.03328749, -0.02525299],\n",
-              "       [ 0.00140228,  0.02744489, -0.042287  , ..., -0.03759339,\n",
-              "        -0.00454023,  0.0016163 ],\n",
+              "array([[ 0.04427708, -0.01064781,  0.02105146, ...,  0.0004003 ,\n",
+              "         0.03167543,  0.04943534],\n",
+              "       [ 0.01172709, -0.02232736,  0.04722979, ..., -0.04705388,\n",
+              "        -0.04199237,  0.04385627],\n",
+              "       [-0.04036009,  0.0199624 , -0.04517343, ..., -0.02099259,\n",
+              "         0.02872104, -0.03966552],\n",
               "       ...,\n",
-              "       [-0.00029685,  0.02801936, -0.02321785, ...,  0.00977889,\n",
-              "        -0.02967455,  0.0495114 ],\n",
-              "       [-0.00029685,  0.02801936, -0.02321785, ...,  0.00977889,\n",
-              "        -0.02967455,  0.0495114 ],\n",
-              "       [-0.00029685,  0.02801936, -0.02321785, ...,  0.00977889,\n",
-              "        -0.02967455,  0.0495114 ]], dtype=float32)>"
+              "       [-0.02293332,  0.00828331, -0.03109035, ...,  0.00870107,\n",
+              "        -0.04472695,  0.01328453],\n",
+              "       [-0.02293332,  0.00828331, -0.03109035, ...,  0.00870107,\n",
+              "        -0.04472695,  0.01328453],\n",
+              "       [-0.02293332,  0.00828331, -0.03109035, ...,  0.00870107,\n",
+              "        -0.04472695,  0.01328453]], dtype=float32)>"
             ]
           },
           "metadata": {},
-          "execution_count": 81
+          "execution_count": 12
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "lstm = tf.keras.layers.LSTM(10)\n",
+        "lstm_bi = tf.keras.layers.Bidirectional(lstm, merge_mode='concat')\n",
+        "\n",
         "model = tf.keras.Sequential([\n",
         "    tv_layer,\n",
         "    em_layer,\n",
         "    tf.keras.layers.Dropout(0.2),\n",
-        "    tf.keras.layers.LSTM(10),\n",
+        "    lstm_bi,\n",
         "    tf.keras.layers.Dropout(0.2),\n",
         "    tf.keras.layers.Flatten(),\n",
         "    tf.keras.layers.Dropout(0.2),\n",
-        "    tf.keras.layers.Dense(1, activation = 'relu')], name = 'lstm10_1')\n",
+        "    tf.keras.layers.Dense(1, activation = 'relu')], name = 'lstm_bi10')\n",
         "model.summary()"
       ],
       "metadata": {
@@ -389,38 +395,39 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AV6yrvt2sLm0",
-        "outputId": "b636da7c-dd25-4eba-ddb7-d9484ca98046"
+        "outputId": "b626e23e-1b0c-4dd8-920b-6204b85170c6"
       },
-      "execution_count": 82,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"lstm10_1\"\n",
+            "Model: \"lstm_bi10\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " text_vectorization_3 (TextV  (None, 200)              0         \n",
-            " ectorization)                                                   \n",
+            " text_vectorization (TextVec  (None, 200)              0         \n",
+            " torization)                                                     \n",
             "                                                                 \n",
-            " embedding_1 (Embedding)     (None, 200, 16)           144576    \n",
+            " embedding (Embedding)       (None, 200, 16)           144576    \n",
             "                                                                 \n",
-            " dropout_6 (Dropout)         (None, 200, 16)           0         \n",
+            " dropout (Dropout)           (None, 200, 16)           0         \n",
             "                                                                 \n",
-            " lstm_2 (LSTM)               (None, 10)                1080      \n",
+            " bidirectional (Bidirectiona  (None, 20)               2160      \n",
+            " l)                                                              \n",
             "                                                                 \n",
-            " dropout_7 (Dropout)         (None, 10)                0         \n",
+            " dropout_1 (Dropout)         (None, 20)                0         \n",
             "                                                                 \n",
-            " flatten_2 (Flatten)         (None, 10)                0         \n",
+            " flatten (Flatten)           (None, 20)                0         \n",
             "                                                                 \n",
-            " dropout_8 (Dropout)         (None, 10)                0         \n",
+            " dropout_2 (Dropout)         (None, 20)                0         \n",
             "                                                                 \n",
-            " dense_2 (Dense)             (None, 1)                 11        \n",
+            " dense (Dense)               (None, 1)                 21        \n",
             "                                                                 \n",
             "=================================================================\n",
-            "Total params: 145,667\n",
-            "Trainable params: 145,667\n",
+            "Total params: 146,757\n",
+            "Trainable params: 146,757\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ]
@@ -441,7 +448,7 @@
       "metadata": {
         "id": "L_LesX7-tBCm"
       },
-      "execution_count": 83,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -455,23 +462,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q6iV5MOItlQ9",
-        "outputId": "50d41171-39d5-49ee-acf5-2cd04b778955"
+        "outputId": "23739d73-36b5-4205-ccea-d8cb5cd656b8"
       },
-      "execution_count": 85,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, tf.Tensor(\n",
-            "[[0.]\n",
-            " [0.]\n",
-            " [0.]\n",
-            " [0.]\n",
-            " [0.]\n",
-            " [0.]\n",
-            " [0.]\n",
-            " [0.]], shape=(8, 1), dtype=float32)\n"
+            "10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 10, 20, 30, "
           ]
         }
       ]
@@ -479,7 +478,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model_path = ROOT + 'My_Models/' + model.name +'/'\n",
+        "model_path = ROOT + MODEL_PATH + model.name +'/'\n",
         "if not os.path.exists(ROOT + model_path):\n",
         "    os.makedirs(ROOT + model_path, exist_ok = False)\n",
         "    print('Created directory ' + ROOT + model_path)\n",
@@ -492,9 +491,43 @@
         "    save_best_only=True)"
       ],
       "metadata": {
-        "id": "QawtHaPHyvV9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QawtHaPHyvV9",
+        "outputId": "45a05211-3006-49d4-e887-a12426770d06"
       },
-      "execution_count": 96,
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Created directory /content/drive/MyDrive/CAS_Gregi//content/drive/MyDrive/CAS_Gregi/My_Models/lstm_bi10/\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def save_model(model):\n",
+        "    model_path = ROOT + MODEL_PATH + model.name +'/'\n",
+        "    if not os.path.exists(ROOT + model_path):\n",
+        "        os.makedirs(ROOT + model_path, exist_ok = False)\n",
+        "        print('Created directory ' + ROOT + model_path)\n",
+        "\n",
+        "    model.save(model_path + model.name + '_save', save_format='tf')\n",
+        "\n",
+        "def load_model(model):\n",
+        "    model_path = ROOT + MODEL_PATH + model.name +'/'\n",
+        "    model = tf.keras.models.load_model(model_path + model.name + '_save')\n",
+        "    return model"
+      ],
+      "metadata": {
+        "id": "MdAW_p5y59DX"
+      },
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -533,7 +566,7 @@
         "else:\n",
         "    print('No previous weights found!')\n",
         "\n",
-        "model.fit(\n",
+        "history =  model.fit(\n",
         "    ds_train,\n",
         "    epochs = 1000,\n",
         "    validation_data = ds_test,\n",
@@ -558,6 +591,49 @@
         "id": "wlmhYZDx1A2o"
       },
       "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# save model\n",
+        "save_model(model)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EWuOuB5GBUqt",
+        "outputId": "fdd99ca8-f8cf-4d95-831e-fbd429afb49b"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Created directory /content/drive/MyDrive/CAS_Gregi//content/drive/MyDrive/CAS_Gregi/My_Modelslstm_bi10/\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:Found untraced functions such as lstm_cell_1_layer_call_fn, lstm_cell_1_layer_call_and_return_conditional_losses, lstm_cell_2_layer_call_fn, lstm_cell_2_layer_call_and_return_conditional_losses while saving (showing 4 of 4). These functions will not be directly callable after loading.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# load the model\n",
+        "# model = load_model(model)"
+      ],
+      "metadata": {
+        "id": "-cWSN7WrBcLJ"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -596,22 +672,29 @@
     {
       "cell_type": "code",
       "source": [
-        "model.load_weights(ROOT + 'data/models/lstm10')\n"
+        "def accuracy(ds):\n",
+        "\n",
+        "    ys_pred = (model.predict(ds).reshape((-1,))).round()\n",
+        "    ys = np.concatenate([y for x, y in ds], axis=0)\n",
+        "    errs = abs(ys - ys_pred)\n",
+        "    N = len(ys)\n",
+        "    relative_hits = [np.count_nonzero(errs==i)/N for i in range(5)]\n",
+        "    return relative_hits\n",
+        "\n",
+        "def np_accuracy(ds):\n",
+        "    f = lambda x:x<0 and -1 or x>0 and 1 or 0\n",
+        "    ys_pred = (model.predict(ds).reshape((-1,))).round() - 2\n",
+        "    ys_pred = np.array([f(x) for x in ys_pred])\n",
+        "    ys = np.concatenate([y for x, y in ds], axis=0) - 2\n",
+        "    ys = np.array([f(x) for x in ys])\n",
+        "\n",
+        "    errs = abs(ys - ys_pred)\n",
+        "    N = len(ys)\n",
+        "    relative_hits = [np.count_nonzero(errs==i)/N for i in [0,1,2]]\n",
+        "    return relative_hits"
       ],
       "metadata": {
-        "id": "K4Hjb3JiFLLt"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# save the model\n",
-        "#model.save(ROOT + 'data/models/lstm10.sav')"
-      ],
-      "metadata": {
-        "id": "X6eL9JMjt8JH"
+        "id": "LQ_GS--qBKa3"
       },
       "execution_count": null,
       "outputs": []
